--- a/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
@@ -94,7 +94,7 @@
 							<div class="form-group row vac">
 								<label class="col-sm-2 col-form-label">휴가 종류</label>
 								<div class="col-sm-2">
-									<select class="form-control" th:field="${apprDetailDTO.vacType}">
+									<select class="form-control" th:field="*{apprDetailDTOList[0].vacType}">
 										<option th:each="vacType : ${T(com.bootstrap.study.approval.constant.ApprVacType).values()}"
 												th:value="${vacType}" th:text="${vacType.label}"></option>
 									</select>
@@ -106,7 +106,7 @@
 								<label class="col-sm-2 col-form-label">기간</label>
 								<div class="col-sm-3">
 									<div class="input-group date" id="startDate" data-target-input="nearest">
-										<input type="text" class="form-control datetimepicker-input" th:field="${apprDetailDTO.startDate}" data-target="#startDate" readonly required>
+										<input type="text" class="form-control datetimepicker-input" th:field="*{apprDetailDTOList[0].startDate}" data-target="#startDate" readonly required>
 										<div class="input-group-append" data-target="#startDate" data-toggle="datetimepicker">
 											<div class="input-group-text"><i class="fas fa-calendar-alt"></i></div>
 										</div>
@@ -114,7 +114,7 @@
 								</div>
 								<div class="col-sm-3">
 									<div class="input-group date" id="endDate" data-target-input="nearest">
-										<input type="text" class="form-control datetimepicker-input" th:field="${apprDetailDTO.endDate}" data-target="#endDate" readonly required>
+										<input type="text" class="form-control datetimepicker-input" th:field="*{apprDetailDTOList[0].endDate}" data-target="#endDate" readonly required>
 										<div class="input-group-append" data-target="#endDate" data-toggle="datetimepicker">
 											<div class="input-group-text"><i class="fas fa-calendar-alt"></i></div>
 										</div>
@@ -127,7 +127,7 @@
 								<label class="col-sm-2 col-form-label">반차 여부</label>
 								<div class="col-sm-8">
 									<div class="form-check form-check-inline" th:each="halfType : ${T(com.bootstrap.study.approval.constant.ApprHalfType).values()}">
-										<input class="form-check-input" type="radio" name="halfType" th:id="'halfType_' + ${halfType.name()}" th:value="${halfType}">
+										<input class="form-check-input" type="radio" th:field="*{apprDetailDTOList[0].halfType}" th:id="'halfType_' + ${halfType.name()}" th:value="${halfType}">
 										<label class="form-check-label" th:for="'halfType_' + ${halfType.name()}" th:text="${halfType.label}"></label>
 									</div>
 								</div>
