달력 공휴일api데이터 삽입중

--- a/bootstrap_stater/src/main/resources/templates/fragments/header.html
+++ b/bootstrap_stater/src/main/resources/templates/fragments/header.html
@@ -25,8 +25,8 @@
 			<hr class="sidebar-divider my-0">
 
 			<!-- Nav Item - Dashboard -->
-			<li class="nav-item active"><a class="nav-link" th:href="@{/index}">
-					<i class="fas fa-fw fa-tachometer-alt"></i> <span>Dashboard</span>
+			<li class="nav-item active"><a class="nav-link" th:href="@{/main}">
+					<i class="fas fa-fw fa-tachometer-alt"></i> <span>메인화면</span>
 			</a></li>
 
 			<!-- Divider -->
