--- a/bootstrap_stater/src/main/resources/static/bootstrap/css/sb-admin-2.css
+++ b/bootstrap_stater/src/main/resources/static/bootstrap/css/sb-admin-2.css
@@ -11279,3 +11279,8 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+.fc-event.holiday-event {
+    color: #fff; /* 텍스트 색상을 흰색으로 설정하여 가독성 높이기 */
+    background-color: #f44336; /* 밝은 빨간색 배경 */
+    border-color: #d32f2f; /* 약간 어두운 빨간색 테두리 */
+}
