--- a/bootstrap_stater/src/main/resources/templates/main.html
+++ b/bootstrap_stater/src/main/resources/templates/main.html
@@ -1,36 +1,95 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout}">
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+	layout:decorate="~{layouts/layout}">
 <head>
-    <!-- 개별페이지 CSS 영역 -->
-    <th:block layout:fragment="style">
-<!--        <link rel="stylesheet" th:href="@{/css/item_main.css}" />-->
-    </th:block>
+<!-- 개별페이지 CSS 영역 -->
+<th:block layout:fragment="style">
+	       <link rel="stylesheet" th:href="@{/bootstrap/css/sb-admin-2.css}" />
+</th:block>
 </head>
 <body>
-<th:block layout:fragment="content">
- <div class="col-md-6 mb-4">
+	<th:block layout:fragment="content">
+	<div class="container-fluid">
+		<div class="d-sm-flex align-items-center justify-content-between mb-4">
+			<h1 class="h3 mb-0 text-gray-800">대시보드</h1>
+		</div>
+
+		<div class="row">
+
+			<div class="col-lg-8">
+				<div class="card shadow mb-4">
+					<div
+						class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+						<h6 class="m-0 font-weight-bold text-primary">근무 일정</h6>
+					</div>
+					<div class="card-body">
+						<div id="calendar2" style="max-width: 100%; margin: auto;"></div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-4">
+
+				<div class="card shadow mb-4">
+					<div class="card-header py-3">
+						<h6 class="m-0 font-weight-bold text-primary">출퇴근 관리</h6>
+					</div>
+					<div class="card-body">
+						<div class="d-flex align-items-center mb-3">
+							<label for="commute_start_time" class="mr-2">출근시간 :</label> <input
+								type="text" id="commute_start_time" class="form-control"
+								disabled>
+						</div>
+						<div class="d-flex align-items-center mb-3">
+							<label for="commute_end_time" class="mr-2">퇴근시간 :</label> <input
+								type="text" id="commute_end_time" class="form-control" disabled>
+						</div>
+						<button class="btn btn-primary btn-block">출퇴근 관리</button>
+					</div>
+				</div>
+
+				<div class="card shadow mb-4">
 					<div
 						class="card-header py-3 d-flex justify-content-between align-items-center">
-						<a href="#collapse2"
-							class="card-header py-3 d-flex justify-content-between align-items-center"
-							data-toggle="collapse" role="button" aria-expanded="true"
-							aria-controls="collapse2">
-							<h6 class="m-0 font-weight-bold">부서별 일정관리</h6>
-						</a> <a th:href="@{/groupware/schWrite}"
-							class="btn btn-sm btn-primary">일정 등록</a>
+						<h6 class="m-0 font-weight-bold text-primary">직원 정보</h6>
+						<span class="badge badge-danger text-uppercase">미출근</span>
 					</div>
-					<div class="collapse show" id="collapse2">
-						<div class="card-body">
-							<div class="table-responsive">
-								<div id="calendar2" style="max-width: 100%; margin: auto;"></div>
-
+					<div class="card-body">
+						<div class="d-flex align-items-center">
+							<div class="mr-3">
+								<i class="fas fa-user-circle fa-4x text-gray-300"></i>
+							</div>
+							<div>
+								<div class="text-gray-800 font-weight-bold">인사팀 2025020007</div>
+								<div class="small text-gray-500"
+									sec:authorize="isAuthenticated()">
+									<span class="mr-2 d-none d-lg-inline text-gray-600 "
+										th:text="${#authentication.principal.name}"></span>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="modal fade" id="addScheduleModal" tabindex="-1"
+
+				<div class="card shadow mb-4">
+					<div class="card-body">
+						<p class="mb-0">결재 문서가 없습니다. 여유로운 하루 보내세요!</p>
+					</div>
+				</div>
+
+				<div class="card shadow mb-4">
+					<div class="card-body">
+						<p class="mb-0">확인해야 할 수신 문서가 없습니다!</p>
+					</div>
+				</div>
+
+			</div>
+		</div>
+		</div>
+<!-- 		모달 관련  -->
+		<div class="modal fade" id="addScheduleModal" tabindex="-1"
 			role="dialog" aria-labelledby="addScheduleModalLabel"
 			aria-hidden="true">
 			<div class="modal-dialog" role="document">
@@ -120,8 +179,6 @@
 				</div>
 			</div>
 		</div>
-</th:block>
 
-
-
+	</th:block>
 </html>
