--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
@@ -83,6 +83,7 @@
 												<th:block th:each=" status: ${status}">
 													<option th:value="${status.comDtId}" th:text="${status.comDtNm}">
 												</th:block>
+												
 											</select>
 										</td>
 									</tr>
@@ -101,7 +102,7 @@
 											<label for="dep_nm" class="form-label">부서명</label></th>
 										<td colspan="3">
 											<select id="dep_nm" name="deptId" class="form-select w-75">
-												<option value="">부서명을 선택하세요</option>
+												<option value="1">부서명을 선택하세요</option>
 												<th:block th:each="departments : ${departments}">
 													<option th:value="${departments.comDtId}" th:text="${departments.comDtNm}">
 												</th:block>
@@ -113,7 +114,7 @@
 											<label for="emp_gd" class="form-label">직책</label></th>
 										<td colspan="3">
 											<select id="emp_gd" name="posId" class="form-select w-75">
-												<option value="">직책을 선택하세요</option>
+												<option value="1">직책을 선택하세요</option>
 												<th:block th:each="position : ${position}">
 													<option th:value="${position.comDtId}" th:text="${position.comDtNm}">
 												</th:block>
