--- a/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
+++ b/bootstrap_stater/src/main/resources/templates/commute/commute_list.html
@@ -5,7 +5,7 @@
 <head>
     <!-- 개별페이지 CSS 영역 -->
     <th:block layout:fragment="style">
-        <!--        <link rel="stylesheet" th:href="@{/css/item_main.css}" />-->
+<!--                <link rel="stylesheet" th:href="@{/css/item_main.css}" /> -->
     </th:block>
 </head>
 <body>
@@ -31,7 +31,9 @@
 				    <h6 class="m-0 font-weight-bold text-primary">나의 부서인원 전체 근퇴현황</h6>
 				    
 				    <div class="d-flex align-items-center gap-2">
-				        <input type="date" class="form-control form-control-sm">
+					    <input type="date" name="startDate" class="form-control form-control-sm" th:value="${startDate}">~
+					    <input type="date" name="endDate" class="form-control form-control-sm" th:value="${endDate}">
+					    <button type="submit" id="searchBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">조회</button>
 				        <button id="checkInBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">출근</button>
 				        <button id="checkOutBtn" class="btn btn-primary btn-sm" style="min-width: 80px;">퇴근</button>
 				    </div>
@@ -190,6 +192,12 @@
 	    });
 	});
 	
+	searchBtn
+	document.getElementById("searchBtn").addEventListener("click", function() {
+	    const startDate = document.querySelector("input[name='startDate']").value;
+	    const endDate = document.querySelector("input[name='endDate']").value;
+	    window.location.href = `/attendance/commuteList?startDate=${startDate}&endDate=${endDate}`;
+	});
 
 	</script>
 	</th:block>
