--- a/bootstrap_stater/src/main/resources/templates/gw/notice.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/notice.html
@@ -42,11 +42,11 @@
 												<td th:text="${stat.count}">순번</td>
 												<td><a href="#" data-toggle="modal"
 													data-target="#noticeModal"
-													th:attr="data-id=${notice.notId}, data-title=${notice.notTitle}, data-content=${notice.notContent}, data-author=${notice.empId}, data-date=${#dates.format(notice.createAt, 'yyyy-MM-dd')}">
+													th:attr="data-id=${notice.notId}, data-title=${notice.notTitle}, data-content=${notice.notContent}, data-author=${notice.employee.name}, data-date=${#dates.format(notice.createAt, 'yyyy-MM-dd')}">
 														<span th:text="${notice.notTitle}">공지 제목</span>
 												</a></td>
 												<td th:text="${notice.notContent}">공지 내용</td>
-												<td th:text="${notice.empId}">작성자</td>
+												<td th:text="${notice.employee.name}">작성자</td>
 												<td
 													th:text="${#dates.format(notice.createAt, 'yyyy-MM-dd')}">등록일</td>
 											</tr>
@@ -65,7 +65,7 @@
 							<a href="#collapse2" class="text-decoration-none text-primary"
 								data-toggle="collapse" role="button" aria-expanded="true"
 								aria-controls="collapse2">
-								<h6 class="m-0 font-weight-bold">부서별 공지사항</h6>
+								<h6 class="m-0 font-weight-bold" th:text="${empDeptName != null ? empDeptName + ' 공지사항' : '부서별 공지사항'}">부서별 공지사항</h6>
 							</a> <a th:href="@{/notice/ntcWrite}" class="btn btn-sm btn-primary">공지
 								등록</a>
 						</div>
@@ -90,12 +90,12 @@
 
 												<td><a href="#" data-toggle="modal"
 													data-target="#noticeModal"
-													th:attr="data-id=${notice.notId}, data-title=${notice.notTitle}, data-content=${notice.notContent}, data-author=${notice.empId}, data-date=${#dates.format(notice.createAt, 'yyyy-MM-dd')}">
+													th:attr="data-id=${notice.notId}, data-title=${notice.notTitle}, data-content=${notice.notContent}, data-author=${notice.employee.name}, data-date=${#dates.format(notice.createAt, 'yyyy-MM-dd')}">
 														<span th:text="${notice.notTitle}">공지 제목</span>
 												</a></td>
 
 												<td th:text="${notice.notContent}">공지 내용</td>
-												<td th:text="${notice.empId}">작성자</td>
+												<td th:text="${notice.employee.name}">작성자</td>
 												<td
 													th:text="${#dates.format(notice.createAt, 'yyyy-MM-dd')}">등록일</td>
 											</tr>
