--- a/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/ntcWrite.html
@@ -29,29 +29,18 @@
 							<textarea th:field="*{notContent}" id="notContent"
 								class="form-control"></textarea>
 						</div>
-<!-- 						<div class="form-group"> -->
-<!-- 							<label for="notType">유형</label> <select th:field="*{notType}" -->
-<!-- 								id="notType" class="form-control"> -->
-<!-- 								<option value="">-- 부서를 선택하세요 --</option> -->
-<!-- 								<option th:each="dept : ${departments}" th:value="${dept.code}" -->
-<!-- 									th:text="${dept.name}"></option> -->
-<!-- 							</select> -->
-<!-- 						</div> -->
 						<div class="form-group">
 							<label for="notType">유형</label> <select th:field="*{notType}"
 								id="notType" class="form-control">
 								<option value="">-- 부서를 선택하세요 --</option>
-								<option value="전체공지">전체공지</option>
-								<option value="부서별">부서별</option>
-								<option value="인사팀">인사팀</option>
-								<option value="구매팀">구매팀</option>
-								<option value="생산팀">생산팀</option>
-								<option value="품질팀">품질팀</option>
+								<option th:each="dept : ${departments}"
+									th:value="${dept.comDtNm}" th:text="${dept.comDtNm}"></option>
 							</select>
 						</div>
+
 						<div class="form-group">
 							<label for="empId">작성자 ID</label> <input type="text"
-								th:field="*{empId}" id="empId" class="form-control" />
+								th:field="*{empId}" id="empId" class="form-control" readonly />
 						</div>
 						<button type="submit" class="btn btn-primary">등록</button>
 					</form>
