--- a/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
+++ b/bootstrap_stater/src/main/resources/templates/approval/drafting_form.html
@@ -66,11 +66,11 @@
 									</div>
 									<!-- 선택된 결재자 표시 영역 -->
 									<div id="selectedUsers" class="mt-2">
-										<button type="button" class="btn btn-sm btn-outline-success m-1" data-id="2025082501">인사하위관리자 (인사팀 / 사원)</button>
+										<button type="button" class="btn btn-sm btn-outline-success m-1" ><th:block th:text="${principal.name}">직급, 부서 생기면 넣어야됨</th:block></button>
 									</div>
 									<!-- hidden input 담을 영역 -->
 									<div id="hiddenEmpIds">
-										<input type="hidden" name="empIds[]" value="2025082501">
+										<input type="hidden" name="empIds[]" th:value="${loginEmpId}">
 									</div>
 								</div>
 							</div>
@@ -325,13 +325,19 @@
 		});
 		
 		$('#apprForm').on('submit', function(e) {
-		  var content = $('#summernote').summernote('code');
-		  /* if (!content || content === '<p><br></p>') {
-		    alert('내용을 입력해주세요.');
-		    e.preventDefault();  // 제출 중단
-		    return false;
-		  } */
-		  $('#summernote').val(content);  // textarea에 Summernote 내용 복사
+			
+			if ($('input[name="empIds[]"]').length <= 1) {
+				alert("결재자를 지정해주세요.");
+				return false;
+			}
+			
+			var content = $('#summernote').summernote('code');
+			 /* if (!content || content === '<p><br></p>') {
+			   alert('내용을 입력해주세요.');
+			   e.preventDefault();  // 제출 중단
+			   return false;
+			 } */
+			$('#summernote').val(content);  // textarea에 Summernote 내용 복사
 		});
 	});
 </script>
