--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelRegist.html
@@ -120,20 +120,19 @@
 												</th:block>
 											</select>
 										</td>
-										<!-- 보안등급 
+										<!-- 보안등급 	-->
 									
 										<th scope="row" class="custom-th">
 											<label for="emp_lv" class="form-label">보안등급</label></th>
 										<td colspan="3">
-											<select id="emp_lv" name="emp_lv" class="form-select w-75">
+											<select id="emp_lv" name="level" class="form-select w-75">
 												<option value="">보안등급을 선택하세요</option>
-												<option value="1">(1)부서원</option>
-												<option value="2">(2)부서장</option>
-												<option value="3">(3)사장</option>
-												<option value="4" disabled="">(4)관리자</option>
+												<th:block th:each="level : ${level}">
+													<option th:value="${level.comDtId}" th:text="${level.comDtNm}">
+												</th:block>
 											</select>
 										</td>
-										-->
+									
 									</tr>
 
 									<tr>
