.공지사항 수정중

--- a/bootstrap_stater/src/main/resources/templates/gw/notice.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/notice.html
@@ -65,7 +65,7 @@
 							<a href="#collapse2" class="text-decoration-none text-primary"
 								data-toggle="collapse" role="button" aria-expanded="true"
 								aria-controls="collapse2">
-								<h6 class="m-0 font-weight-bold" th:text="${empDeptName != null ? empDeptName + ' 공지사항' : '부서별 공지사항'}">부서별 공지사항</h6>
+								<h6 class="m-0 font-weight-bold" th:text="${empDeptName != null ? empDeptName + ' 공지사항' : '부서별 공지사항'}"></h6>
 							</a> <a th:href="@{/notice/ntcWrite}" class="btn btn-sm btn-primary">공지
 								등록</a>
 						</div>
