인사관리 전 페이지 공통코드에 맞게 재수정

--- a/bootstrap_stater/src/main/resources/templates/hrn/orgChart.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/orgChart.html
@@ -27,8 +27,8 @@
 							<div class="dept-list">
        							<select id="deptSelect" size="4" >
            							<option th:each="dept : ${departments}"
-                   							th:value="${dept.id}"
-                   							th:text="${dept.name}">
+                   							th:value="${dept.comDtId}"
+                   							th:text="${dept.comDtNm}">
 									</option>
       							 </select>
    							</div>
