--- a/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
+++ b/bootstrap_stater/src/main/resources/templates/hrn/personnelDetailInfo.html
@@ -96,43 +96,43 @@
 											</div>
 										</td>
 
-										<!-- 부서명 
+										<!-- 부서명 -->
 										<th scope="row" class="custom-th">
 											<label for="dep_nm" class="form-label">부서명</label></th>
 										<td colspan="3">
 											<select id="dep_nm" name="deptId" class="form-select w-75">
 												<option value="1">부서명을 선택하세요</option>
 												<th:block th:each="departments : ${departments}">
-													<option th:value="${departments.comDtId}" th:text="${departments.comDtNm}" th:selected="${departments.comDtId == personnel.deptId}"></option>
+													<option th:value="${departments.comDtId}" th:text="${departments.comDtNm}" th:selected="${departments.comDtId == personnel.deptId}"></option>	<!--  -->
 												</th:block>
 											</select>
 										</td>
--->
-										<!-- 직책 
+										<!-- 직책 -->
 										<th scope="row" class="custom-th">
 											<label for="emp_gd" class="form-label">직책</label></th>
 										<td colspan="3">
 											<select id="emp_gd" name="posId" class="form-select w-75">
 												<option value="1">직책을 선택하세요</option>
 												<th:block th:each="position : ${position}">
-													<option th:value="${position.comDtId}" th:text="${position.comDtNm}" th:selected="${position.comDtId == personnel.posId}"></option>
+													<option th:value="${position.comDtId}" th:text="${position.comDtNm}" th:selected="${position.comDtId == personnel.posId}"></option> <!--  -->
 												</th:block>
 											</select>
 										</td>
-										-->
-										<!-- 보안등급 	
+										
+										<!-- 보안등급 	-->
+									
 									
 										<th scope="row" class="custom-th">
 											<label for="emp_lv" class="form-label">보안등급</label></th>
 										<td colspan="3">
 											<select id="emp_lv" name="level" class="form-select w-75">
-												<option value="">보안등급을 선택하세요</option>
+												<option value="" >보안등급을 선택하세요</option>
 												<th:block th:each="level : ${level}">
-													<option th:value="${level.comDtId}" th:text="${level.comDtNm}" th:selected="{level.comDtId == personnel.levId}" >
+													<option th:value="${level.comDtId}" th:text="${level.comDtNm}"  th:selected="${level.comDtId == personnel.levId}" > 
 												</th:block>
 											</select>
 										</td>
-									-->
+									
 									</tr>
 
 									<tr>
