--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -12,7 +12,7 @@
 	rel="stylesheet">
 <link href="css/sb-admin-2.min.css" rel="stylesheet">
 </head>
-<body th:data-current-emp-id="${currentEmpId}">
+<body th:data-current-emp-id="${currentEmpId}" th:data-emp-dept-id="${empDeptId}" th:data-emp-dept-name="${empDeptName}">
 	<th:block layout:fragment="content">
 		<div class="container-fluid">
 			<div class="row">
@@ -44,7 +44,7 @@
 							class="card-header py-3 d-flex justify-content-between align-items-center"
 							data-toggle="collapse" role="button" aria-expanded="true"
 							aria-controls="collapse2">
-							<h6 class="m-0 font-weight-bold">부서별 일정관리</h6>
+							<h6 class="m-0 font-weight-bold" th:text="${empDeptName != null ? empDeptName + ' 일정관리' : '부서별 일정관리'}">부서별 일정관리</h6>
 						</a> <a th:href="@{/schedule/schWrite}" class="btn btn-sm btn-primary">일정
 							등록</a>
 					</div>
@@ -60,7 +60,6 @@
 			</div>
 		</div>
 
-		<!-- 모달 관련 코드 -->
 		<div class="modal fade" id="addScheduleModal" tabindex="-1"
 			role="dialog" aria-labelledby="addScheduleModalLabel"
 			aria-hidden="true">
@@ -81,15 +80,20 @@
 									readonly> <input type="hidden" id="modalEmpId"
 									name="empId">
 							</div>
-
-							<div class="form-group" th:if="${isAdmin}">
-								<label for="schType">일정 타입</label> <select class="form-control"
-									id="schType" name="schType">
-									<option value="전체">전체 일정</option>
-									<option value="부서">부서별 일정</option>
+							
+							<div class="form-group">
+								<label for="schType">일정 타입</label> 
+								<select class="form-control" id="schType" name="schType">
+									<th:block th:if="${isAdmin}">
+										<option value="전체">전체 일정</option>
+										<option th:each="dept : ${allDepartments}" th:value="${dept.comDtNm}" th:text="${dept.comDtNm + ' 일정'}"></option>
+									</th:block>
+									<th:block th:unless="${isAdmin}">
+										<option th:value="${empDeptName}" th:text="${empDeptName + ' 일정'}"></option>
+									</th:block>
 								</select>
 							</div>
-							
+
 							<div class="form-group">
 								<label for="modalTitle">일정 제목</label> <input type="text"
 									class="form-control" id="modalTitle" name="schTitle" required>
