내 연차 관리

--- a/bootstrap_stater/src/main/resources/static/bootstrap/css/admin/commonCode.css
+++ b/bootstrap_stater/src/main/resources/static/bootstrap/css/admin/commonCode.css
@@ -41,6 +41,12 @@
   	transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
+input[type="search"] {
+    font-family: 'Arial', 'Noto Sans KR', sans-serif; /* 원하는 글꼴 */
+    font-size: 14px; /* 글자 크기 */
+    color: #333; /* 글자 색상 */
+}
+
 .filterArea {
 	display: flex;
 	padding-bottom: 5px;
