일정관리 수정 삭제 등록 권한부여 완료 추가작업중

--- a/bootstrap_stater/src/main/resources/templates/gw/schedule.html
+++ b/bootstrap_stater/src/main/resources/templates/gw/schedule.html
@@ -89,7 +89,7 @@
 										<option th:each="dept : ${allDepartments}" th:value="${dept.comDtNm}" th:text="${dept.comDtNm + ' 일정'}"></option>
 									</th:block>
 									<th:block th:unless="${isAdmin}">
-										<option th:value="${empDeptName}" th:text="${empDeptName}"></option>
+										<option th:value="${empDeptName}" th:text="${empDeptName + ' 일정'}"></option>
 									</th:block>
 								</select>
 							</div>
